Fix IE11 issues
- Redux form props not being reflected to the DOM
- FoodSuggestionItem now is a <a>
- Hide select dropdown arrow on IE
- Fix pseudo element not showing correctly

--- a/client/src/stylesheets/components/_App.scss
+++ b/client/src/stylesheets/components/_App.scss
@@ -18,3 +18,7 @@
     box-shadow: none;
   }
 }
+
+.select::-ms-expand {
+  display: none;
+}
