--- a/client/src/stylesheets/components/_UserSetting.scss
+++ b/client/src/stylesheets/components/_UserSetting.scss
@@ -47,6 +47,7 @@
   
       &:after {
         position: absolute;
+        display: block;
         top: -12px;
         left: 25%;
         width: 34px;
